# ML_Wakad_weekend_1130

./: main.py  pyproject.toml  test.ipynb
01_Simple_Linear_Reg/: SLR.ipynb
02_Multiple_Linear_Reg/: MLR.ipynb
03_Manual_preprocessing/: ohe.joblib  pre.ipynb  results.csv  scaler.joblib  weight_model.joblib
04_Automated_preprocessing/: cars_pre.joblib  pipeline.ipynb  results.csv  weight_model.joblib
05_06_Feature_Selection/: Backward.ipynb  Forward.ipynb  backward_model.joblib  backward_res.csv  backward_sel.joblib  forward_model.joblib  forward_res.csv
07_08_Ridge_Lasso/: Regularization.ipynb  lasso.joblib  pre.joblib  results.csv  sel.joblib
09_Regression_Project/: pre.joblib  reg.ipynb  results.csv  ridge_model.joblib  sel.joblib
10_Logistic_reg/: iris_model.joblib  log.ipynb  pre.joblib
11_Decision_Tree_Classification/: dtc.ipynb  iris_model.joblib  iris_pre.joblib  predictions.csv
12_Decision_Tree_Regression/: DTR.ipynb  dtr_model.joblib  pre.joblib
13_Ensemble Techniques/: ensemble.ipynb  xgb_model.joblib
14_KNN_SVM/: KNN_SVM.ipynb  results.csv
15_Algo_Evaluation/: algo_eval.ipynb  loan_model.joblib  loan_results.csv  pre.joblib  utils.py
